fixed dialog widths too small fixed duration display using wrong fn fixed segment date range updating - -- adding a client level of interpretation of db column fields

--- a/03-blitz/cmdb2/public/global2.css
+++ b/03-blitz/cmdb2/public/global2.css
@@ -1138,3 +1138,10 @@ li.songDropdownOption {
 .CMMenu .admin.linkMenuItem:hover {
     background-color: #ccc;
 }
+
+
+/* for some reason default dialogs like to be max-width:600px. this overrides that to let edit dialogs to be wide enough for contents.
+in particular the date range picker is wide.*/
+.MuiDialog-container.MuiDialog-scrollPaper .MuiPaper-root {
+    max-width: 95vw;
+}
